# AP_Project_2021-2022

./: .gitignore  CMakeLists.txt  README_CONTROLS.txt  main.cpp
.circleci/: config.yml
Logic/: AbstractFactory.cpp  AbstractFactory.h  Background.cpp  Background.h  Bonus.cpp  Bonus.h  Camera.cpp  Camera.h  Entity.cpp  Entity.h  Observer.cpp  Observer.h  Platform.cpp  Platform.h  Player.cpp  Player.h  Random.cpp  Random.h  Score.cpp  Score.h  Stopwatch.cpp  Stopwatch.h  Vector2D.cpp  Vector2D.h  World.cpp  World.h
Visuals/: BackgroundView.cpp  BackgroundView.h  BonusView.cpp  BonusView.h  ConcreteFactory.cpp  ConcreteFactory.h  EntityView.cpp  EntityView.h  Game.cpp  Game.h  PlatformView.cpp  PlatformView.h  PlayerView.cpp  PlayerView.h  ScoreView.cpp  ScoreView.h  TextureLoader.cpp  TextureLoader.h  VS_Game.cpp  VS_Game.h
